added new route, and updated swagger.
