# controllers/users.js
@@ -12,4 +12,19 @@ const getAll = async (req, res, next) =>{
   });
 };
 
-module.exports = { getAll }
+const getSingle = async (req, res, next) => {
+  if (!ObjectId.isValid(req.params.id)){
+    res.status(400).json('Must use a valid id to find a user.');
+  }
+  const userId = new ObjectId(req.params.id);
+  const result = await mongodb.getDb().db().collection('users').find();
+  result.toArray().then((err, lists) =>{
+    if (err){
+      res.status(400).json({ message: err });
+    }
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(lists[0]);
+  });
+};
+
+module.exports = { getAll, getSingle }
