# routes/users.js
@@ -1,10 +1,11 @@
 const express = require('express');
 const router = express.Router();
-// const { requiresAuth } = require('express-openid-connect');
+const { requiresAuth } = require('express-openid-connect');
 
 const userController = require('../controllers/users')
-// const validation = require('../middleware/validate')
+const validation = require('../middleware/validate')
 
-router.get('/', userController.getAll);
+router.get('/', requiresAuth(), userController.getAll);
+router.get('/:id', requiresAuth(), userController.getSingle);
 
 module.exports = router;
